Minimal, working website

--- a/_config.yml
+++ b/_config.yml
@@ -1,71 +1,65 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
-
-# Google webmaster tools
-google_verify:
-
-# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:
+title: Trophic Nexus Bioinformatics Consulting
+email: josh@trophicnexus.com
+url: https://trophicnexus.com
+description: "I provide bioinformatics support for preclinical biotech startups, offering services from infrastructure deployment and pipeline development to data analysis and algorithm design. My research background is in microbial genomics and the microbiome, enabling deep insight into complex biological data."
+meta_author: Joshua J Hamilton
 
 # Contact form:
-# - static : pass through formspree.io to validate email sending
-# - disqus : replace contact form by disqus thread
-# - comment the line below if you want to stick with the default PHP contact form
+# pass through formspree.io to validate email sending
 contact: static
 
-# If you use disqus you need disqus shortname
-# https://help.disqus.com/customer/portal/articles/466208
-disqus_shortname: myshortname
-
 # Color settings (hex-codes without the leading hash-tag)
+# From https://www.schemecolor.com/blue-gray-color-scheme.php
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  ateneo-blue: 003B6D
+  ateneo-blue-rgb: "0, 59, 109"
+  blue-gray: 6699CC
+  blue-gray-rgb: "102, 153, 204"
+  bright-gray: EBEDF3
+  bright-gray-rgb: "235, 237, 243"
+  x11_gray: BDBDBD
+  x11_gray-rgb: "189, 189, 189"
+  granite_gray: 676767
+  granite_gray-rgb: "103, 103, 103"
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
-  location: Location
-  social: Around the Web
-  credits: Credits
+  copyright: Joshua J. Hamilton
+  contact: Contact
+  social: Social Media
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+  - title: linkedin
+    url: https://www.linkedin.com/in/joshamilton
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/joshamilton
 
 # Postal address (add as many lines as necessary)
-address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
-
-# Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+contact:
+  - line: Joshua J. Hamilton, PhD
+  - line: josh@trophicnexus.com
 
 # Build settings
 markdown: kramdown
 permalink: pretty
 
-#for posts
+#for projects and services
 defaults:
   - scope:
-      path: ""
-      type: "posts"
+      path: "_projects"
+      type: "projects"
     values:
-      permalink: ""
+      permalink: "/projects/:title/"
+  - scope:
+      path: "_services"
+      type: "services"
+    values:
+      permalink: "/projects/:title/"
+
+collections:
+  projects:
+    output: true
+  services:
+    output: true
