Add Google Scholar

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,8 @@ social:
     url: https://www.linkedin.com/in/joshamilton
   - title: github
     url: http://github.com/joshamilton
+  - title: google scholar
+    url: https://scholar.google.com/citations?hl=en&user=0wdKuE8AAAAJ&view_op=list_works&sortby=pubdate
 
 # Postal address (add as many lines as necessary)
 contact:
